<resources>
    <string name="app_name">Homework_1</string>
    <string name="number_1">1</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
    <string name="number_7">7</string>
    <string name="number_8">8</string>
    <string name="number_9">9</string>
    <string name="number_0">0</string>
    <string name="number_plus">+</string>
    <string name="number_hashtag">#</string>
    <string name="calling">Calling . . .</string>
    <string name="delete">Delete</string>
    <string name="contact_name">Name</string>
    <string name="contact_number">Phone Number</string>
</resources>