<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:foregroundGravity="center_vertical"
    android:foregroundTint="#FF9800"
    android:foregroundTintMode="src_over"
    android:textAlignment="center"
    android:textDirection="locale"
    app:layout_anchorGravity="center_horizontal|center_vertical"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="400dp"
        android:layout_height="410dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="215dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="139dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/board_text"
                    android:layout_width="217dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="10dp"
                    android:background="#8BFF9800"
                    android:backgroundTint="#8BFF9800"
                    android:backgroundTintMode="src_atop"
                    android:drawableTint="#000000"
                    android:foregroundTint="#FF9800"
                    android:gravity="center"
                    android:textColor="#000000"
                    android:textColorHint="#000000" />


            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="217dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/value_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000"
                    android:textSize="12dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/value_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000"
                    android:textSize="12dp"
                    tools:ignore="SpeakableTextPresentCheck" />

                <Button
                    android:id="@+id/value_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000"
                    android:textSize="12dp"
                    tools:ignore="SpeakableTextPresentCheck" />

            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="217dp"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_1"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000" />

                <Button
                    android:id="@+id/number_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_2"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />

                <Button
                    android:id="@+id/number_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_3"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_4"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_4"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />

                <Button
                    android:id="@+id/number_5"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_5"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />

                <Button
                    android:id="@+id/number_6"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_6"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_7"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_7"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />

                <Button
                    android:id="@+id/number_8"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_8"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />

                <Button
                    android:id="@+id/number_9"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_9"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|center_horizontal|center_vertical"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/number_plus"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_plus"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColor="#000"
                    android:textColorHint="#000" />

                <Button
                    android:id="@+id/number_0"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_0"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000" />

                <Button
                    android:id="@+id/number_hashtag"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:backgroundTint="#6F009688"
                    android:foregroundTint="#009688"
                    android:hint="@string/number_hashtag"
                    android:onClick="clickNumber"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textColorHint="#000" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:gravity="center|center_horizontal|center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="113dp"
                    android:layout_height="52dp"
                    android:backgroundTint="#8B43C326"
                    android:onClick="clickToCall"
                    android:tint="#FFF"
                    app:srcCompat="@android:drawable/stat_sys_phone_call"
                    tools:ignore="SpeakableTextPresentCheck" />

                <ImageButton
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="52dp"
                    android:layout_weight="1"
                    android:backgroundTint="#8DFA392B"
                    android:contentDescription="@string/delete"
                    android:foregroundTint="#FFFFFF"
                    android:onClick="clickToDelete"
                    android:tint="#FFF"
                    app:srcCompat="@android:drawable/ic_input_delete" />

            </LinearLayout>

        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/phone_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/phone_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/phone_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="invisible" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>